app.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Unicorn
Parameters:
  EnvironmentName:
    Description: An environment name that is prefixed to resource names
    Type: String
    Default: Unicorn
    

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.0.0.0/16

  PublicSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: 10.0.10.0/24

  PublicSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 10.0.11.0/24

  PrivateSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
    Type: String
    Default: 10.0.20.0/24

  PrivateSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
    Type: String
    Default: 10.0.21.0/24

  apiGatewayHTTPMethod:
    Type: String
    Default: GET

Resources:
# NETWORK
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet (AZ1)

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet (AZ2)

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Subnet (AZ2)

  NatGatewayEIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Routes

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2


  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Routes (AZ1)

  DefaultPrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet2

# s3 Bucket 
  s3Bucket:
    Type: AWS::S3::Bucket
    Properties: 
      AccessControl: Private
      BucketName: gameday-361574505353
      VersioningConfiguration:
        Status: Enabled
      BucketEncryption: 
        ServerSideEncryptionConfiguration: 
        - ServerSideEncryptionByDefault:
            SSEAlgorithm: AES256

# Vpc FlowLog
  S3Flowlog:
    DependsOn: s3Bucket
    Type: AWS::EC2::FlowLog
    Properties:
      LogDestination: !GetAtt s3Bucket.Arn
      LogDestinationType: s3
      LogFormat: ${version} ${vpc-id} ${subnet-id} ${instance-id} ${srcaddr} ${dstaddr} ${srcport} ${dstport} ${protocol} ${tcp-flags} ${type} ${pkt-srcaddr} ${pkt-dstaddr}
      MaxAggregationInterval: 60
      DestinationOptions:
        FileFormat: parquet
        HiveCompatiblePartitions: true
        PerHourPartition: true
      ResourceId: !Ref VPC
      ResourceType: VPC
      TrafficType: ALL

  # CloudwatchFlow:
  #   Type: AWS::EC2::FlowLog
  #   Properties:
  #     DeliverLogsPermissionArn: !GetAtt FlowLogRole.Arn
  #     LogGroupName: FlowLogsGroup
  #     ResourceId: !Ref VPC
  #     ResourceType: VPC
  #     TrafficType: ALL

  # LogicalID:
  #   Type: AWS::S3::BucketPolicy
  #   Properties:
  #     Bucket: !Ref s3Bucket
  #     PolicyDocument:
  #       Version: '2012-10-17'
  #       Statement: 
        

# API-GW & Lambda
  lambdaFunction:
    Type: AWS::Lambda::Function
    Properties:
      Handler: index.handler
      Role: arn:aws:iam::361574505353:role/MyLambdaExecutionRole
      Runtime: nodejs18.x
      Code:
        ZipFile: |
          exports.handler = async function(event) {
            return {"account_id": "361574505353"};
          };
      Timeout: 5
      TracingConfig:
        Mode: Active

  # LambdaInvokePermission:
  #   Type: AWS::Lambda::Permission
  #   Properties:
  #     FunctionName: !Ref lambdaFunction
  #     Action: "lambda:InvokeFunction"
  #     Principal: apigateway.amazonaws.com
  #     SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${apiGateway}/*/*"

  apiGateway:
    Type: AWS::ApiGateway::RestApi
    Properties:
      Description: unicorn-apigw
      EndpointConfiguration:
        Types:
          - REGIONAL
      Name: unicorn-apigw

  apiMethod:
    Type: 'AWS::ApiGateway::Method'
    Properties:
      RestApiId: !Ref apiGateway
      ResourceId: !GetAtt apiGateway.RootResourceId
      HttpMethod: ANY
      MethodResponses:
        - StatusCode: '200'
          ResponseModels:
            application/json: Empty
      AuthorizationType: NONE
      Integration:
        Type: AWS
        IntegrationHttpMethod: ANY
        # Credentials: "arn:aws:iam::361574505353:role/MyLambdaExecutionRole"
        IntegrationResponses:
          - StatusCode: "200"
        Uri: !Sub >-
          arn:aws:apigateway:us-east-1:lambda:path/2015-03-31/functions/${lambdaFunction.Arn}/invocations

  Deployment:
    DependsOn: apiMethod
    Type: 'AWS::ApiGateway::Deployment'
    Properties:
      RestApiId: !Ref apiGateway
      StageName: Prod

# Ec2
  Ec2KeyPair:
    Type: 'AWS::EC2::KeyPair'
    Properties:
      KeyName: gameday-key

  EC2Role: 
    Type: "AWS::IAM::InstanceProfile"
    Properties: 
      Path: "/"
      Roles: 
        - "WSEC2Role"

# Bastion
  BastionSg:
    Type: AWS::EC2::SecurityGroup
    DependsOn: VPC
    Properties:
      GroupDescription: SG to test ping
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 223.122.123.109/32

  Ec2Instance: 
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: "ami-0b72821e2f351e396"
      KeyName: !Ref Ec2KeyPair
      InstanceType: t3.micro
      IamInstanceProfile: !Ref EC2Role
      UserData:
        Fn::Base64: !Sub |
           #!/bin/bash
           yum update -y
           cd /root
           aws ssm get-parameter --name /ec2/keypair/key-0a6639a9594688d81 --with-decryption --query Parameter.Value --output text > gameday-key.pem
           chmod 400 ./gameday-key.pem
      NetworkInterfaces: 
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet: 
            - !Ref BastionSg 
          SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: bastion

# ALB 
  # AlbLoggingS3Bucket:
  #   Type: AWS::S3::Bucket
  #   Properties:
  #     BucketName: gameday-alblog-361574505353
  #     AccessControl: PublicRead
  #     PublicAccessBlockConfiguration:
  #       BlockPublicAcls: false
  #       BlockPublicPolicy: false
  #       IgnorePublicAcls: false
  #       RestrictPublicBuckets: false
        
  ELBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ELB Security Group
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Subnets: 
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !GetAtt ELBSecurityGroup.GroupId
      # LoadBalancerAttributes:
      #   - Key: access_logs.s3.enabled
      #     Value: 'true'
      #   - Key: access_logs.s3.bucket
      #     Value: !Ref AlbLoggingS3Bucket
      #   - Key: access_logs.s3.prefix
      #     Value: 'my-alb-logs'

  EC2TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 15
      HealthyThresholdCount: 5
      Matcher:
        HttpCode: '200'
      Name: EC2TargetGroup
      Port: 80
      Protocol: HTTP
      TargetGroupAttributes:
      - Key: deregistration_delay.timeout_seconds
        Value: '20'
      UnhealthyThresholdCount: 3
      VpcId: !Ref VPC

  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref EC2TargetGroup
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
 
# CloudFront 
  MyCustomCachePolicy:
    Type: AWS::CloudFront::CachePolicy
    Properties:
      CachePolicyConfig:
        Name: MyCustomCachePolicyForSpecificQueryString
        Comment: Cache policy that includes the specific query string parameter
        DefaultTTL: 86400
        MaxTTL: 31536000
        MinTTL: 1
        ParametersInCacheKeyAndForwardedToOrigin:
          CookiesConfig:
            CookieBehavior: none
          EnableAcceptEncodingGzip: true
          EnableAcceptEncodingBrotli: true
          HeadersConfig:
            HeaderBehavior: none
          QueryStringsConfig:
            QueryStringBehavior: whitelist
            QueryStrings:
              - input-SUNhbkhhelVuaWNvem40LTY3NDkSY
              
  cloudfrontdistribution:
    Type: AWS::CloudFront::Distribution
    Properties:
      DistributionConfig:
        Enabled: true
        DefaultCacheBehavior:
          CachePolicyId: !Ref MyCustomCachePolicy
          TargetOriginId: ALB
          ViewerProtocolPolicy: "allow-all"
        Origins:
          - DomainName: !GetAtt ApplicationLoadBalancer.DNSName
            Id: ALB
            CustomOriginConfig:
              HTTPPort: 80
              OriginProtocolPolicy: http-only


# Application EC2
  ApplicationSg:
    Type: AWS::EC2::SecurityGroup
    DependsOn: VPC
    Properties:
      GroupDescription: applciation
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 10.0.0.0/16
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 10.0.0.0/16
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 10.0.0.0/16

  applicationLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties: 
      LaunchTemplateName: applicationLaunchTemplate
      LaunchTemplateData:
        ImageId: "ami-0b72821e2f351e396"
        KeyName: !Ref Ec2KeyPair
        InstanceType: t3.micro
        TagSpecifications:
          - ResourceType: "instance"
            Tags:
            - Key: "Name"
              Value: "Application"
        UserData:
          Fn::Base64: !Sub |
             #!/bin/bash
             yum update -y
             cd /root
             aws s3 cp s3://gameday-361574505353/ws-ec2-pipeline-server .
             wget https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem
             sudo chmod 700 ./ws-ec2-pipeline-server
             sudo ./ws-ec2-pipeline-server

        IamInstanceProfile:
          Arn: !GetAtt EC2Role.Arn
        NetworkInterfaces: 
          - AssociatePublicIpAddress: "true"
            DeviceIndex: "0"
            Groups: 
              # - !Ref BastionSg
              - !Ref ApplicationSg

  applicationAsg:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref applicationLaunchTemplate
        Version: !GetAtt applicationLaunchTemplate.LatestVersionNumber
      MaxSize: '5'
      MinSize: '1'
      TargetGroupARNs:
        - !Ref EC2TargetGroup
      VPCZoneIdentifier:   
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      MetricsCollection: 
        - Granularity: 1Minute
          Metrics: 
            - GroupMinSize
            - GroupMaxSize

# DocumentDB
  SecretsManagerVPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      SecurityGroupIds:
        - !Ref ApplicationSg
        - !Ref BastionSg
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.us-east-1.secretsmanager
      PrivateDnsEnabled: true
      VpcId: !Ref VPC


  DatabaseSg:
    Type: AWS::EC2::SecurityGroup
    DependsOn: VPC
    Properties:
      GroupDescription: SG to test ping
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 27017
          ToPort: 27017
          CidrIp: 10.0.0.0/16

  DocDBClusterRotationSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      GenerateSecretString:
        SecretStringTemplate: '{"username": "someadmin","ssl": true}'
        GenerateStringKey: password
        PasswordLength: 16
        ExcludePunctuation: true    
      Tags:
        - Key: AppName
          Value: Unicorn

  DocDBCluster:
    Type: AWS::DocDB::DBCluster
    Properties:
      DBSubnetGroupName: !Ref DBSubnetGroup
      MasterUsername: !Sub '{{resolve:secretsmanager:${DocDBClusterRotationSecret}::username}}'
      MasterUserPassword: !Sub '{{resolve:secretsmanager:${DocDBClusterRotationSecret}::password}}'
      VpcSecurityGroupIds:
        - !Ref DatabaseSg

  DocDBInstance:
    Type: AWS::DocDB::DBInstance
    Properties:
      DBClusterIdentifier: !Ref DocDBCluster
      DBInstanceClass: db.t3.medium

  DBSubnetGroup:
    Type: AWS::DocDB::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: 'private-subnet'
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

  SecretDocDBClusterAttachment:
    Type: AWS::SecretsManager::SecretTargetAttachment
    Properties:
      SecretId: !Ref DocDBClusterRotationSecret
      TargetId: !Ref DocDBCluster
      TargetType: AWS::DocDB::DBCluster

  # MySecretRotationSchedule:
  #   Type: AWS::SecretsManager::RotationSchedule
  #   DependsOn: SecretDocDBClusterAttachment
  #   Properties:
  #     SecretId: !Ref MyDocDBClusterRotationSecret
  #     HostedRotationLambda:
  #       RotationType: MongoDBSingleUser
  #       RotationLambdaName: MongoDBSingleUser
  #       VpcSecurityGroupIds: !GetAtt TestVPC.DefaultSecurityGroup
  #       VpcSubnetIds: !Join
  #         - ','
  #         - - !Ref TestSubnet01
  #           - !Ref TestSubnet02
  #     RotationRules:
  #       Duration: 2h
  #       ScheduleExpression: cron(0 8 1 * ? *)

# App Config
  Application:
    Type: AWS::AppConfig::Application
    Properties:
      Name: "Unicorn"
      Description: "Unicorn application."
      Tags:
        - Key: Env
          Value: Production

  ProdEnvironment:
    Type: AWS::AppConfig::Environment
    Properties:
      ApplicationId: !Ref Application
      Name: "Production"
      Description: "Production environment"
      Tags:
        - Key: Env
          Value: Production

  ConfigurationProfile:
    Type: AWS::AppConfig::ConfigurationProfile
    Properties:
      ApplicationId: !Ref Application
      Name: "Unicorn"
      Description: "My test configuration profile"
      LocationUri: hosted
      Tags:
        - Key: Env
          Value: Production

  HostedConfigurationVersion:
    Type: AWS::AppConfig::HostedConfigurationVersion
    Properties:
      ApplicationId: !Ref Application
      ConfigurationProfileId: !Ref ConfigurationProfile
      Description: ' configuration prod value'
      Content: !Sub |
        {
        "DBSeretARN" : "arn:aws:secretsmanager:us-east-1:361574505353:secret:DocDBClusterRotationSecret-eV14i8kuqShC-FRJcob",
        "MongoDbDatabase" : "unicorndb",
        "MongoDbCollection" : "unicorncollection",
        "MongoDbCAFilePath" : "./global-bundle.pem",
        "Port": 80,
        "Bucket" : "gameday-361574505353",
        "ApiGatewayUrl" : "https://q9zkbg6j21.execute-api.us-east-1.amazonaws.com/Prod/gameday"
        }
      ContentType: 'application/json'


  DeploymentStrategy:
    Type: AWS::AppConfig::DeploymentStrategy
    Properties:
      Name: "Unicorn DeploymentStrategy"
      Description: "deployment strategy."
      DeploymentDurationInMinutes: 0
      FinalBakeTimeInMinutes: 0
      GrowthFactor: 100
      GrowthType: LINEAR
      ReplicateTo: NONE
      Tags:
        - Key: Env
          Value: Production

  appConfigDeployment:
    Type: AWS::AppConfig::Deployment
    Properties:
      ApplicationId: !Ref Application
      EnvironmentId: !Ref ProdEnvironment
      DeploymentStrategyId: !Ref DeploymentStrategy
      ConfigurationProfileId: !Ref ConfigurationProfile
      ConfigurationVersion: '1'
      Description: 'Unicorn deployment'
      Tags:
        - Key: Env
          Value: Production

Outputs:
  VPC:
    Description: A reference to the created VPC
    Value: !Ref VPC

  PublicSubnet1:
    Description: A reference to the public subnet in the 1st Availability Zone
    Value: !Ref PublicSubnet1

  PublicSubnet2:
    Description: A reference to the public subnet in the 2nd Availability Zone
    Value: !Ref PublicSubnet2

  PrivateSubnet1:
    Description: A reference to the private subnet in the 1st Availability Zone
    Value: !Ref PrivateSubnet1

  PrivateSubnet2:
    Description: A reference to the private subnet in the 2nd Availability Zone
    Value: !Ref PrivateSubnet2

  S3Bucket:
    Description: S3Bucket
    Value: !Ref s3Bucket

  LambdaFunction:
    Description: LambdaFunction
    Value: !Ref lambdaFunction

  SecretManager:
    Description: SecretManager
    Value: !Ref DocDBClusterRotationSecret
